fix footer contrast

--- a/app/ui/Footer/index.module.scss
+++ b/app/ui/Footer/index.module.scss
@@ -3,9 +3,9 @@
 }
 
 .copyright {
-  @apply text-footer-text text-opacity-50;
+  @apply text-footer-text text-opacity-75;
 
   &Logo {
-    @apply inline fill-footer-logo opacity-50 transition duration-300 ease-in-out;
+    @apply inline fill-footer-logo opacity-75 transition duration-300 ease-in-out;
   }
 }
